# boost.radix

./: .clang-format  CMakeLists.txt  README.md  notes.txt
benchmark/: CMakeLists.txt
benchmark/codec/: base64_beast.cpp  base64_reference.cpp  rfc4648.cpp
examples/: base64.cpp
include/boost/radix/: alphabet.hpp  basic_codec.hpp  basic_codec_traits.hpp  bitmask.hpp  codec.hpp  common.hpp  decode.hpp  encode.hpp  encode_iterator.hpp  exception.hpp  pad.hpp  segment.hpp  segment_packer.hpp  segment_unpacker.hpp  static_ibitstream.hpp  static_ibitstream_lsb.hpp  static_ibitstream_msb.hpp  static_obitstream.hpp  static_obitstream_lsb.hpp  static_obitstream_msb.hpp  static_sequential_ibitstream.hpp  static_sequential_obitstream.hpp
include/boost/radix/codec/rfc4648/: base16.hpp  base32.hpp  base32hex.hpp  base64.hpp  base64url.hpp
include/boost/radix/codec_traits/: pad.hpp  segment.hpp  validation.hpp  whitespace.hpp
include/boost/radix/codecs/rfc4648/: base32.hpp  base32hex.hpp  base64.hpp  base64url.hpp
include/boost/radix/detail/: bits.hpp  bits_lcm.hpp  ibitstream.hpp  obitstream.hpp  segment.hpp  segment_buffer.hpp
test/: CMakeLists.txt  base64_reference.hpp  base64_simd.hpp  bitstreams.cpp  common.hpp  decode.cpp  encode.cpp  generate_bytes.hpp  ibitstream.cpp  obitstream.cpp  round_trip.cpp  static_ibitstream.cpp  static_obitstream.cpp
test/codec/: rfc4648.cpp
